feat: studygroup map struct mapper 연동